fix: Adjust header position and update marquee z-index for improved layout

--- a/frontend/src/app/home/home.component.css
+++ b/frontend/src/app/home/home.component.css
@@ -152,6 +152,7 @@ header {
     background: #544AAF;
     background: linear-gradient(323deg,rgba(84, 74, 175, 0.9) 0%, rgba(204, 54, 52, 0.9) 33%, rgba(204, 102, 55, 0.8) 66%, rgba(170, 61, 167, 0.9) 100%);
     z-index: 10;
+    position: relative;
   }
 
   .marquee__inner {
